--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/bulma": "^1.2.0",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.0",
     "express": "^4.16.3",
     "nuxt": "^2.0.0"
   },
