--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "2.6.2",
-    "prettier": "1.14.3"
+    "nodemon": "^1.11.0",
+    "prettier": "1.14.3",
+    "vue-particles": "^1.0.9"
   }
 }
