--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/bulma": "^1.2.0",
+    "chart.js": "^2.8.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "express": "^4.16.3",
+    "hchs-vue-charts": "^1.2.8",
     "nuxt": "^2.0.0",
     "vee-validate": "^2.1.5"
   },
