--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@nuxtjs/bulma": "^1.2.0",
     "chart.js": "^2.8.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.0",
     "express": "^4.16.3",
     "hchs-vue-charts": "^1.2.8",
     "nuxt": "^2.0.0",
@@ -25,10 +24,15 @@
     "vue2-google-maps": "^0.10.6"
   },
   "devDependencies": {
+    "css-loader": "^2.1.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "2.6.2",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.11.0",
     "prettier": "1.14.3",
+    "sass-loader": "^7.1.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "vue-particles": "^1.0.9"
   }
 }
